Add tenant_id field to multiple entities and repositories; implement tenant context handling