@@ -1,14 +1,15 @@
 package com.monocampusconnect.config;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -19,6 +20,10 @@ import java.util.List;
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
+
+    @Lazy
+    @Autowired
+    private JwtAuthenticationFilter jwtAuthenticationFilter;
 
     private static final List<String> PUBLIC_ENDPOINTS = Arrays.asList(
             "/api/auth/**",
@@ -37,62 +42,58 @@ public class SecurityConfig {
                     // Public endpoints
                     auth.requestMatchers(PUBLIC_ENDPOINTS.toArray(String[]::new)).permitAll();
 
-                    // Course endpoints - accessible to all authenticated users
-                    auth.requestMatchers(
-                            "/api/courses/**"
-                    ).authenticated();
+                    // Super Admin only endpoints
+                    auth.requestMatchers("/api/tenants/**", "/api/super-admin/**")
+                            .hasRole("SUPER_ADMIN");
 
-                    // Admin-only endpoints
-                    auth.requestMatchers(
-                            "/api/admin/**",
-                            "/api/exams/type/**",
-                            "/api/materials/type/**",
-                            "/api/results/status/**"
-                    ).hasRole("ADMIN");
+                    // Admin-only management
+                    auth.requestMatchers("/api/admin/**").hasAnyRole("ADMIN", "SUPER_ADMIN");
+                    auth.requestMatchers("/api/departments/**").hasAnyRole("ADMIN", "SUPER_ADMIN");
+                    auth.requestMatchers("/api/timetable").hasAnyRole("ADMIN", "SUPER_ADMIN");
+                    auth.requestMatchers("/api/timetable/**").hasAnyRole("ADMIN", "FACULTY", "STUDENT", "SUPER_ADMIN");
 
-                    // Faculty-only endpoints
-                    auth.requestMatchers(
-                            "/api/exams/**",
-                            "/api/materials/**",
-                            "/api/results/**"
-                    ).hasAnyRole("FACULTY", "ADMIN");
+                    // Faculty + Admin
+                    auth.requestMatchers("/api/exams/**").hasAnyRole("FACULTY", "ADMIN", "SUPER_ADMIN");
+                    auth.requestMatchers("/api/materials/**").hasAnyRole("FACULTY", "ADMIN", "STUDENT", "SUPER_ADMIN");
+                    auth.requestMatchers("/api/results/**").hasAnyRole("FACULTY", "ADMIN", "STUDENT", "SUPER_ADMIN");
+                    auth.requestMatchers("/api/attendance/**").hasAnyRole("FACULTY", "ADMIN", "STUDENT", "SUPER_ADMIN");
 
-                    // Student-only endpoints
-                    auth.requestMatchers(
-                            "/api/exams/student/**",
-                            "/api/materials/course/**",
-                            "/api/results/student/**"
-                    ).hasAnyRole("STUDENT", "FACULTY", "ADMIN");
+                    // Notifications — all authenticated
+                    auth.requestMatchers("/api/notifications/**").authenticated();
 
-                    // Profile endpoints
-                    auth.requestMatchers(
-                            "/api/profile/**"
-                    ).hasAnyRole("STUDENT", "FACULTY", "ADMIN");
+                    // Course endpoints — all authenticated
+                    auth.requestMatchers("/api/courses/**").authenticated();
 
-                    // All other authenticated requests
+                    // Profile endpoints — all authenticated
+                    auth.requestMatchers("/api/profile/**").authenticated();
+
+                    // Event endpoints — all authenticated
+                    auth.requestMatchers("/api/events/**").authenticated();
+
+                    // All other requests require authentication
                     auth.anyRequest().authenticated();
                 })
                 .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://localhost:5174", "http://localhost:5175"));
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:5173",
+                "http://localhost:5174",
+                "http://localhost:5175"
+        ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Content-Type", "Authorization", "Accept", "Origin", "X-Requested-With"));
         configuration.setAllowCredentials(true);
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setExposedHeaders(List.of("Authorization"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
     }
 }
